fix spacing in top issues

--- a/txlege84/static/scss/theme/_global.scss
+++ b/txlege84/static/scss/theme/_global.scss
@@ -127,7 +127,7 @@ button,
 ul {
   @include clearfix;
   list-style: none;
-  margin: 0 0 1em;
+  margin: 0;
   padding: 0;
 }
 
@@ -137,14 +137,12 @@ li {
   font-size: 1em;
   font-weight: 500;
   line-height: 1.6em;
-  margin: .75em auto;
+  margin: 0;
   text-align: left;
 }
 
 nav {
   @include clearfix;
-  margin-bottom: 1em;
-
 }
 
 section {
